src/components/UI/Navigation/navigation.module.css
.navigation {
  display: grid;
  border-bottom: 1px solid var(--color-2);
  padding-bottom: 1em;
}

.navigation section {
  overflow: hidden;
}

/* Labels */

.navigation label {
  display: grid;
  grid-template: 1fr / 1rem max-content;
  align-items: center;
  font-size: 0.8rem;
  color: var(--font-color-1-bright);
  padding: 0.25em;

  cursor: pointer;
  user-select: none;
}

.navigation svg {
  place-self: center;
  height: 35%;
  max-width: 40px;
  fill: var(--color-2);
  transition: transform 0.1s ease-in-out;
}

/* list */

.navigation ul {
  max-height: 500px;
  margin-left: 1.05em;
  list-style: none;
  transition: max-height 0.2s ease;
  border-left: 1px solid var(--color-2);
}

.navigation a {
  padding-left: 1.5em;
}

.navigation a:hover {
  color: var(--font-color-1-bright);
}

/* Checkbox / behaviour */

.navigation input[type="checkbox"] {
  display: none;
}

.navigation input[type="checkbox"]:checked ~ ul {
  max-height: 0px;
}

.navigation input[type="checkbox"]:checked ~ label svg {
  transform: rotate(-90deg);
}



/* Link */

.navigation-link,
.navigation-link-active {
  font-family: var(--font-main);
  position: relative;
  text-decoration: none;
  font-size: 0.7rem;

  display: grid;
  grid-template: 1fr / 1fr;
  width: max-content;
  height: 100%;
}

.navigation-link { 
  color: var(--font-color-1);
}

.navigation-link-active {
  position: relative;
  color: var(--font-color-1-bright);
}

.navigation-link-active::after {
  content: "✓";
  position: absolute;
  right: -1.2em;
  height: 100%;
  font-size: 0.6rem;
  color: var(--color-3);
}

